part2/ex2/manifests/backend_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-backend
          image: tsadom/dwkex:14.b
          volumeMounts:
          - name: shared-image
            mountPath: /usr/app/files
