part2/ex2/manifests/frontend_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: tsadom/dwkex:14.f
