part2/ex2/manifests/backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 8080
