part2/ex2/manifests/frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: NodePort
  selector:
    app: todo-frontend
  ports:
    - name: http
      protocol: TCP
      port: 2346
      targetPort: 80
